--- a/.github/workflows/fargate-runner.yml
+++ b/.github/workflows/fargate-runner.yml
@@ -78,12 +78,11 @@ jobs:
         path: |
            tfoutput.json
            
-      
-
-    - name: Terraform destroy
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      id: destroy
-      run: terraform destroy -auto-approve
+     
+    # - name: Terraform destroy
+    #   if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    #   id: destroy
+    #   run: terraform destroy -auto-approve
   
   build:
     needs: terraform
