--- a/.github/workflows/fargate-runner.yml
+++ b/.github/workflows/fargate-runner.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'push'
-      run: terraform plan -no-color -input=false -var "RUNNER_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}, REPO_OWNER=${{ secrets.REPO_OWNER }}, REPO_NAME=${{ secrets.REPO_NAME }}"
+      run: terraform plan -no-color -input=false -var "RUNNER_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}" -var "REPO_OWNER=${{ secrets.REPO_OWNER }}" -var "REPO_NAME=${{ secrets.REPO_NAME }}"
       continue-on-error: true
 
     - name: Terraform Plan Status 
@@ -64,7 +64,7 @@ jobs:
       run: |
         # chmod +x tf_apply.sh
         # ./tf_apply.sh
-        terraform apply -auto-approve -input=false -var "RUNNER_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}, REPO_OWNER=${{ secrets.REPO_OWNER }}, REPO_NAME=${{ secrets.REPO_NAME }}"
+        terraform apply -auto-approve -input=false -var "RUNNER_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}" -var "REPO_OWNER=${{ secrets.REPO_OWNER }}" -var "REPO_NAME=${{ secrets.REPO_NAME }}"
         #terraform apply -auto-approve -var "PERSONAL_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}, REPO_OWNER=${{ secrets.REPO_OWNER }}, REPO_NAME=${{ secrets.REPO_NAME }}, AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}, AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}, AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" 
                 
                 
