--- a/.github/workflows/fargate-runner.yml
+++ b/.github/workflows/fargate-runner.yml
@@ -12,7 +12,7 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     env:
-      RUNNER_ACCESS_TOKEN: ${{ secrets.RUNNER_ACCESS_TOKEN }} 
+      PAT: ${{ secrets.PAT }} 
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
@@ -52,7 +52,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'push'
-      run: terraform plan -no-color -input=false -var "RUNNER_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}" -var "REPO_OWNER=${{ secrets.REPO_OWNER }}" -var "REPO_NAME=${{ secrets.REPO_NAME }}"
+      run: terraform plan -no-color -input=false -var "PAT=${{ secrets.PAT }}" -var "REPO_OWNER=${{ secrets.REPO_OWNER }}" -var "REPO_NAME=${{ secrets.REPO_NAME }}"
       continue-on-error: true
 
     - name: Terraform Plan Status 
@@ -64,8 +64,8 @@ jobs:
       run: |
         # chmod +x tf_apply.sh
         # ./tf_apply.sh
-        terraform apply -auto-approve -input=false -var "RUNNER_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}" -var "REPO_OWNER=${{ secrets.REPO_OWNER }}" -var "REPO_NAME=${{ secrets.REPO_NAME }}"
-        #terraform apply -auto-approve -var "PERSONAL_ACCESS_TOKEN=${{ secrets.RUNNER_ACCESS_TOKEN }}, REPO_OWNER=${{ secrets.REPO_OWNER }}, REPO_NAME=${{ secrets.REPO_NAME }}, AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}, AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}, AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" 
+        terraform apply -auto-approve -input=false -var "PAT=${{ secrets.PAT }}" -var "REPO_OWNER=${{ secrets.REPO_OWNER }}" -var "REPO_NAME=${{ secrets.REPO_NAME }}"
+        #terraform apply -auto-approve -var "PERSONAL_ACCESS_TOKEN=${{ secrets.PAT }}, REPO_OWNER=${{ secrets.REPO_OWNER }}, REPO_NAME=${{ secrets.REPO_NAME }}, AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}, AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}, AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" 
                 
                 
     - name: Save Terraform Output
@@ -115,7 +115,7 @@ jobs:
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-        RUNNER_ACCESS_TOKEN: ${{ secrets.RUNNER_ACCESS_TOKEN }} 
+        PAT: ${{ secrets.PAT }} 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
