--- a/.github/workflows/fargate-runner.yml
+++ b/.github/workflows/fargate-runner.yml
@@ -12,11 +12,11 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     env:
-      PAT: ${{ secrets.PAT }}
+      PAT_ACCESS_TOKEN: ${{ secrets.PAT_ACCESS_TOKEN }}
       ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }} 
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       RUNNER_NAME: ${{ secrets.RUNNER_NAME }}
       RUNNER_REPOSITORY_URL: ${{ secrets.RUNNER_REPOSITORY_URL }}
@@ -54,7 +54,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'push'
-      run: terraform plan -no-color -input=false -var "PAT=${{ secrets.PAT }}" -var "RUNNER_REPOSITORY_URL=${{ secrets.RUNNER_REPOSITORY_URL }}" -var "RUNNER_NAME=${{ secrets.RUNNER_NAME }}" -var "RUNNER_LABELS=${{ secrets.RUNNER_LABELS }}"
+      run: terraform plan -no-color -input=false -var "PAT_ACCESS_TOKEN=${{ secrets.PAT_ACCESS_TOKEN }}" -var "RUNNER_REPOSITORY_URL=${{ secrets.RUNNER_REPOSITORY_URL }}" -var "RUNNER_NAME=${{ secrets.RUNNER_NAME }}" -var "RUNNER_LABELS=${{ secrets.RUNNER_LABELS }}"
       continue-on-error: true
 
     - name: Terraform Plan Status 
@@ -66,7 +66,7 @@ jobs:
       run: |
         # chmod +x tf_apply.sh
         # ./tf_apply.sh
-        terraform apply -auto-approve -input=false -var "PAT=${{ secrets.PAT }}" -var "RUNNER_REPOSITORY_URL=${{ secrets.RUNNER_REPOSITORY_URL }}" -var "RUNNER_NAME=${{ secrets.RUNNER_NAME }}" -var "RUNNER_LABELS=${{ secrets.RUNNER_LABELS }}"
+        terraform apply -auto-approve -input=false -var "PAT_ACCESS_TOKEN=${{ secrets.PAT_ACCESS_TOKEN }}" -var "RUNNER_REPOSITORY_URL=${{ secrets.RUNNER_REPOSITORY_URL }}" -var "RUNNER_NAME=${{ secrets.RUNNER_NAME }}" -var "RUNNER_LABELS=${{ secrets.RUNNER_LABELS }}"
          
                 
                 
@@ -82,10 +82,10 @@ jobs:
            tfoutput.json
            
      
-    - name: Terraform destroy
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      id: destroy
-      run: terraform destroy -auto-approve -input=false -var "PAT=${{ secrets.PAT }}" -var "RUNNER_REPOSITORY_URL=${{ secrets.RUNNER_REPOSITORY_URL }}" -var "RUNNER_NAME=${{ secrets.RUNNER_NAME }}" -var "RUNNER_LABELS=${{ secrets.RUNNER_LABELS }}"
+    # - name: Terraform destroy
+    #   if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    #   id: destroy
+    #   run: terraform destroy -auto-approve -input=false -var "PAT_ACCESS_TOKEN=${{ secrets.PAT_ACCESS_TOKEN }}" -var "RUNNER_REPOSITORY_URL=${{ secrets.RUNNER_REPOSITORY_URL }}" -var "RUNNER_NAME=${{ secrets.RUNNER_NAME }}" -var "RUNNER_LABELS=${{ secrets.RUNNER_LABELS }}"
   
   build:
     needs: terraform
@@ -104,7 +104,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+        aws-region: ${{ secrets.AWS_REGION }}
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         
    
@@ -117,10 +117,10 @@ jobs:
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-        PAT: ${{ secrets.PAT }} 
+        PAT_ACCESS_TOKEN: ${{ secrets.PAT_ACCESS_TOKEN }} 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
         RUNNER_NAME: ${{ secrets.RUNNER_NAME }}
         RUNNER_REPOSITORY_URL: ${{ secrets.RUNNER_REPOSITORY_URL }}
